@@ -631,5 +631,8 @@
         it can be scroll. And the end of the item is fitted on the end of the viewport.
 
 2012-10-19  Tae-Hwan Kim (Bluezery)
-
         * Fixed wrong_calc_job parameter.
+
+2012-10-19  ChunEon Park (Hermet)
+
+        * Fix elm_transit image animation which last few frames are skipped.
